added mouseover/mouseout for top row :pineapple:

--- a/index.html
+++ b/index.html
@@ -5,45 +5,50 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <title>College Basketball</title>
-
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="styles/styles.css" rel="stylesheet">
         <link href="styles/responsive.css" rel="stylesheet">
-
-
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
     </head>
     <body>
       <!-- <div class="background-splash"></div> -->
       <div class="page-header" style="border-bottom: none;">
         <h1>College Basketball <small>Shit gets weird.</small></h1>
+        <p>If you really think about it, it's weird that old dudes <br />get this stoked about young men playing a game.</p>
       </div>
-      <div class="background-splash">
         <div id="first row" class="row no-pad">
-          <div class="col-md-4"><img src="img/izzo-msu.jpeg" alt="Tom Izzo MSU Spartans"></div>
-          <div class="col-md-4"><img src="img/boeheim-syr.jpeg" alt="Jim Boeheim Syracuse Orange"></div>
-          <div class="col-md-4"><img src="img/crean-iu.jpeg" alt="Tom Crean Indiana Hoosiers"></div>
+          <div id="izzo" class="col-md-4">
+            <img id="izzo" src="img/izzo-msu.jpeg" alt="Tom Izzo MSU Spartans"
+            onmouseover="this.src='img/izzo-msu-green.jpg'"
+            onmouseout="this.src='img/izzo-msu.jpeg'">
+          </div>
+          <div id="boeheim" class="col-md-4">
+            <img src="img/boeheim-syr.jpeg" alt="Jim Boeheim Syracuse Orange"
+            onmouseover="this.src='img/boeheim-syr-orange.jpg'"
+            onmouseout="this.src='img/boeheim-syr.jpeg'">
+          </div>
+          <div id="crean" class="col-md-4">
+            <img  src="img/crean-iu.jpeg" alt="Tom Crean Indiana Hoosiers"
+            onmouseover="this.src='img/crean-iu-red.jpg'"
+            onmouseout="this.src='img/crean-iu.jpeg'">
+          </div>
         </div>
         <div id="second row" class="row no-pad">
-          <div class="col-md-4"><img src="img/mccaffery-iowa.jpeg" alt="Fran McCaffery Iowa Hawkeyes"></div>
-          <div class="col-md-4"><img src="img/miller-ua.jpeg" alt="Sean Miller Arizona Wildcats"></div>
-          <div class="col-md-4"><img src="img/ollie-uconn.jpeg" alt="Kevin Ollie Uconn Huskies"></div>
+          <div id="mccaff" class="col-md-4"><img  src="img/mccaffery-iowa.jpeg" alt="Fran McCaffery Iowa Hawkeyes"></div>
+          <div id="miller" class="col-md-4"><img  src="img/miller-ua.jpeg" alt="Sean Miller Arizona Wildcats"></div>
+          <div id="ollie" class="col-md-4"><img  src="img/ollie-uconn.jpeg" alt="Kevin Ollie Uconn Huskies"></div>
         </div>
         <div id="third row" class="row no-pad">
-          <div class="col-md-4"><img src="img/k-duke.jpg" alt="Coach K Duke Blue Devils"></div>
-          <div class="col-md-4"><img src="img/hurley-asu.jpeg" alt="Bobby Hurley Arizona State Sun Devils"></div>
-          <div class="col-md-4"><img src="img/huggins-wvu.jpeg" alt="Bob Huggins West Virginia Mountaineers"></div>
+          <div id="k" class="col-md-4"><img  src="img/k-duke.jpg" alt="Coach K Duke Blue Devils"></div>
+          <div id="hurley"  class="col-md-4"><img src="img/hurley-asu.jpeg" alt="Bobby Hurley Arizona State Sun Devils"></div>
+          <div id="huggins" class="col-md-4"><img  src="img/huggins-wvu.jpeg" alt="Bob Huggins West Virginia Mountaineers"></div>
         </div>
         <div id="fourth row" class="row no-pad">
-          <div class="col-md-4"><img src="img/williams-unc.jpg" alt="Roy Williams North Carolina Tar Heels"></div>
-          <div class="col-md-4"><img src="img/cronin-cincy.jpeg" alt="Cronin Cincinnati Bearcats"></div>
-          <div class="col-md-4"><img src="img/calipari-ky.jpeg" alt="John Calipari Kentucky Wildcats"></div>
+          <div id="williams" class="col-md-4"><img  src="img/williams-unc.jpg" alt="Roy Williams North Carolina Tar Heels"></div>
+          <div id="cronin" class="col-md-4"><img  src="img/cronin-cincy.jpeg" alt="Cronin Cincinnati Bearcats"></div>
+          <div id="calipari" class="col-md-4"><img  src="img/calipari-ky.jpeg" alt="John Calipari Kentucky Wildcats"></div>
         </div>
       </div>
 
