added sport selector

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>College Basketball</title>
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/css/bootstrap-select.min.css">
         <link href="styles/styles.css" rel="stylesheet">
         <link href="styles/responsive.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
@@ -15,8 +16,20 @@
     <body>
       <!-- <div class="background-splash"></div> -->
       <div class="page-header" style="border-bottom: none;">
-        <h1>College Basketball <small>Shit gets weird.</small></h1>
+        <div class="header-selector">
+          <select class="selectpicker">
+            <option>NCAA Basketball</option>
+            <option>NFL</option>
+            <option>NCAA Football</option>
+            <option>NHL</option>
+            <option>MLB</option>
+            <option>Soccer</option>
+            <option>MLB</option>
+          </select>
+        </div>
+        <h1>Angry Coaches, <small>Shit gets weird.</small></h1>
         <p>If you really think about it, it's weird that old dudes <br />get this stoked about young men playing a game.</p>
+
       </div>
         <div id="first row" class="row no-pad">
           <div id="izzo" class="col-md-4">
@@ -54,6 +67,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.4/js/bootstrap-select.min.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
