--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
         <link href="styles/styles.css" rel="stylesheet">
         <link href="styles/responsive.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato">
+        <style>
+.inv {
+   display: none;
+}
+   </style>
     </head>
     <body>
-      <!-- <div class="background-splash"></div> -->
+
       <div class="page-header" style="border-bottom: none;">
         <div class="header-selector">
-          <select class="selectpicker">
-            <option>NCAA Basketball</option>
-            <option>NFL</option>
+          <select id="target" class="selectpicker">
+            <option value="ncaa-basketball">NCAA Basketball</option>
+            <option value="nfl">NFL</option>
             <option>NCAA Football</option>
             <option>NHL</option>
             <option>MLB</option>
@@ -29,41 +34,60 @@
         </div>
         <h1>Angry Coaches, <small>Shit gets weird.</small></h1>
         <p>If you really think about it, it's weird that old dudes <br />get this stoked about young men playing a game.</p>
+      </div>
+    <div id="ncaa-basketball" class="vis">
+      <div id="first row" class="row no-pad">
+        <div id="izzo" class="col-md-4">
+          <img id="izzo" src="img/izzo-msu.jpeg" alt="Tom Izzo MSU Spartans"
+          onmouseover="this.src='img/izzo-msu-green.jpg'"
+          onmouseout="this.src='img/izzo-msu.jpeg'">
+        </div>
+        <div id="boeheim" class="col-md-4">
+          <img src="img/boeheim-syr.jpeg" alt="Jim Boeheim Syracuse Orange"
+          onmouseover="this.src='img/boeheim-syr-orange.jpg'"
+          onmouseout="this.src='img/boeheim-syr.jpeg'">
+        </div>
+        <div id="crean" class="col-md-4">
+          <img  src="img/crean-iu.jpeg" alt="Tom Crean Indiana Hoosiers"
+          onmouseover="this.src='img/crean-iu-red.jpg'"
+          onmouseout="this.src='img/crean-iu.jpeg'">
+        </div>
+      </div>
+      <div id="second row" class="row no-pad">
+        <div id="mccaff" class="col-md-4"><img  src="img/mccaffery-iowa.jpeg" alt="Fran McCaffery Iowa Hawkeyes"></div>
+        <div id="miller" class="col-md-4"><img  src="img/miller-ua.jpeg" alt="Sean Miller Arizona Wildcats"></div>
+        <div id="ollie" class="col-md-4"><img  src="img/ollie-uconn.jpeg" alt="Kevin Ollie Uconn Huskies"></div>
+      </div>
+      <div id="third row" class="row no-pad">
+        <div id="k" class="col-md-4"><img  src="img/k-duke.jpg" alt="Coach K Duke Blue Devils"></div>
+        <div id="hurley"  class="col-md-4"><img src="img/hurley-asu.jpeg" alt="Bobby Hurley Arizona State Sun Devils"></div>
+        <div id="huggins" class="col-md-4"><img  src="img/huggins-wvu.jpeg" alt="Bob Huggins West Virginia Mountaineers"></div>
+      </div>
+      <div id="fourth row" class="row no-pad">
+        <div id="williams" class="col-md-4"><img  src="img/williams-unc.jpg" alt="Roy Williams North Carolina Tar Heels"></div>
+        <div id="cronin" class="col-md-4"><img  src="img/cronin-cincy.jpeg" alt="Cronin Cincinnati Bearcats"></div>
+        <div id="calipari" class="col-md-4"><img  src="img/calipari-ky.jpeg" alt="John Calipari Kentucky Wildcats"></div>
+      </div>
+    </div>
+    <div id="nfl" class="inv">
+      HOLY CRAP
+    </div>
 
-      </div>
-        <div id="first row" class="row no-pad">
-          <div id="izzo" class="col-md-4">
-            <img id="izzo" src="img/izzo-msu.jpeg" alt="Tom Izzo MSU Spartans"
-            onmouseover="this.src='img/izzo-msu-green.jpg'"
-            onmouseout="this.src='img/izzo-msu.jpeg'">
-          </div>
-          <div id="boeheim" class="col-md-4">
-            <img src="img/boeheim-syr.jpeg" alt="Jim Boeheim Syracuse Orange"
-            onmouseover="this.src='img/boeheim-syr-orange.jpg'"
-            onmouseout="this.src='img/boeheim-syr.jpeg'">
-          </div>
-          <div id="crean" class="col-md-4">
-            <img  src="img/crean-iu.jpeg" alt="Tom Crean Indiana Hoosiers"
-            onmouseover="this.src='img/crean-iu-red.jpg'"
-            onmouseout="this.src='img/crean-iu.jpeg'">
-          </div>
-        </div>
-        <div id="second row" class="row no-pad">
-          <div id="mccaff" class="col-md-4"><img  src="img/mccaffery-iowa.jpeg" alt="Fran McCaffery Iowa Hawkeyes"></div>
-          <div id="miller" class="col-md-4"><img  src="img/miller-ua.jpeg" alt="Sean Miller Arizona Wildcats"></div>
-          <div id="ollie" class="col-md-4"><img  src="img/ollie-uconn.jpeg" alt="Kevin Ollie Uconn Huskies"></div>
-        </div>
-        <div id="third row" class="row no-pad">
-          <div id="k" class="col-md-4"><img  src="img/k-duke.jpg" alt="Coach K Duke Blue Devils"></div>
-          <div id="hurley"  class="col-md-4"><img src="img/hurley-asu.jpeg" alt="Bobby Hurley Arizona State Sun Devils"></div>
-          <div id="huggins" class="col-md-4"><img  src="img/huggins-wvu.jpeg" alt="Bob Huggins West Virginia Mountaineers"></div>
-        </div>
-        <div id="fourth row" class="row no-pad">
-          <div id="williams" class="col-md-4"><img  src="img/williams-unc.jpg" alt="Roy Williams North Carolina Tar Heels"></div>
-          <div id="cronin" class="col-md-4"><img  src="img/cronin-cincy.jpeg" alt="Cronin Cincinnati Bearcats"></div>
-          <div id="calipari" class="col-md-4"><img  src="img/calipari-ky.jpeg" alt="John Calipari Kentucky Wildcats"></div>
-        </div>
-      </div>
+    <script>
+        document
+            .getElementById('target')
+            .addEventListener('change', function () {
+                'use strict';
+                var vis = document.querySelector('.vis'),
+                    target = document.getElementById(this.value);
+                if (vis !== null) {
+                    vis.className = 'inv';
+                }
+                if (target !== null ) {
+                    target.className = 'vis';
+                }
+        });
+    </script>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
