started adding ncaa football coaches

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <select id="target" class="selectpicker">
             <option value="ncaa-basketball">NCAA Basketball</option>
             <option value="nfl">NFL</option>
-            <option>NCAA Football</option>
+            <option value="ncaa-football">NCAA Football</option>
             <option>NHL</option>
             <option>MLB</option>
             <option>Soccer</option>
@@ -69,8 +69,39 @@
         <div id="calipari" class="col-md-4"><img  src="img/calipari-ky.jpeg" alt="John Calipari Kentucky Wildcats"></div>
       </div>
     </div>
-    <div id="nfl" class="inv">
-      HOLY CRAP
+    <div id="ncaa-football" class="inv">
+      <div id="first row" class="row no-pad">
+        <div id="kelly" class="col-md-4">
+          <img id="kelly" src="img/kelly-nd.jpg" alt="Brian Kelly Notre Dame"
+          onmouseover="this.src='img/izzo-msu-green.jpg'"
+          onmouseout="this.src='img/kelly-nd.jpg'">
+        </div>
+        <div id="saban" class="col-md-4">
+          <img src="img/saban-al.jpg" alt="Nick Saban Alabama Crimson Tide"
+          onmouseover="this.src='img/boeheim-syr-orange.jpg'"
+          onmouseout="this.src='img/saban-al.jpg'">
+        </div>
+        <div id="harbaugh" class="col-md-4">
+          <img  src="img/harbaugh-um.jpg" alt="Jim Harbaugh Michigan Wolverines"
+          onmouseover="this.src='img/crean-iu-red.jpg'"
+          onmouseout="this.src='img/harbaugh-um.jpg'">
+        </div>
+      </div>
+      <div id="second row" class="row no-pad">
+        <div id="mccaff" class="col-md-4"><img  src="img/mccaffery-iowa.jpeg" alt="Fran McCaffery Iowa Hawkeyes"></div>
+        <div id="miller" class="col-md-4"><img  src="img/miller-ua.jpeg" alt="Sean Miller Arizona Wildcats"></div>
+        <div id="ollie" class="col-md-4"><img  src="img/ollie-uconn.jpeg" alt="Kevin Ollie Uconn Huskies"></div>
+      </div>
+      <div id="third row" class="row no-pad">
+        <div id="k" class="col-md-4"><img  src="img/k-duke.jpg" alt="Coach K Duke Blue Devils"></div>
+        <div id="hurley"  class="col-md-4"><img src="img/hurley-asu.jpeg" alt="Bobby Hurley Arizona State Sun Devils"></div>
+        <div id="huggins" class="col-md-4"><img  src="img/huggins-wvu.jpeg" alt="Bob Huggins West Virginia Mountaineers"></div>
+      </div>
+      <div id="fourth row" class="row no-pad">
+        <div id="williams" class="col-md-4"><img  src="img/williams-unc.jpg" alt="Roy Williams North Carolina Tar Heels"></div>
+        <div id="cronin" class="col-md-4"><img  src="img/cronin-cincy.jpeg" alt="Cronin Cincinnati Bearcats"></div>
+        <div id="calipari" class="col-md-4"><img  src="img/calipari-ky.jpeg" alt="John Calipari Kentucky Wildcats"></div>
+      </div>
     </div>
 
     <script>
