changed images raround so all fit in row with no gutter for height and added photoshop effects for first two rows

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    </style>
     </head>
     <body>
-
+    <div class="row">
       <div class="page-header" style="border-bottom: none;">
         <div class="header-selector">
           <select id="target" class="selectpicker">
@@ -35,28 +35,41 @@
         <h1>Angry Coaches, <small>Shit gets weird.</small></h1>
         <p>If you really think about it, it's weird that old dudes <br />get this stoked about young men playing a game.</p>
       </div>
+    </div>
     <div id="ncaa-basketball" class="vis">
       <div id="first row" class="row no-pad">
         <div id="izzo" class="col-md-4">
-          <img id="izzo" src="img/izzo-msu.jpeg" alt="Tom Izzo MSU Spartans"
-          onmouseover="this.src='img/izzo-msu-green.jpg'"
-          onmouseout="this.src='img/izzo-msu.jpeg'">
+          <img id="izzo" src="img/izzo.jpg" alt="Tom Izzo MSU Spartans"
+          onmouseover="this.src='img/izzo-green.jpg'"
+          onmouseout="this.src='img/izzo.jpg'">
         </div>
         <div id="boeheim" class="col-md-4">
-          <img src="img/boeheim-syr.jpeg" alt="Jim Boeheim Syracuse Orange"
-          onmouseover="this.src='img/boeheim-syr-orange.jpg'"
-          onmouseout="this.src='img/boeheim-syr.jpeg'">
+          <img src="img/jb-syr.jpg" alt="Jim Boeheim Syracuse Orange"
+          onmouseover="this.src='img/jb-orange.jpg'"
+          onmouseout="this.src='img/jb-syr.jpg'">
         </div>
         <div id="crean" class="col-md-4">
-          <img  src="img/crean-iu.jpeg" alt="Tom Crean Indiana Hoosiers"
-          onmouseover="this.src='img/crean-iu-red.jpg'"
-          onmouseout="this.src='img/crean-iu.jpeg'">
+          <img  src="img/crean-nocolor.jpg" alt="Tom Crean Indiana Hoosiers"
+          onmouseover="this.src='img/crean-red.jpg'"
+          onmouseout="this.src='img/crean-nocolor.jpg'">
         </div>
       </div>
       <div id="second row" class="row no-pad">
-        <div id="mccaff" class="col-md-4"><img  src="img/mccaffery-iowa.jpeg" alt="Fran McCaffery Iowa Hawkeyes"></div>
-        <div id="miller" class="col-md-4"><img  src="img/miller-ua.jpeg" alt="Sean Miller Arizona Wildcats"></div>
-        <div id="ollie" class="col-md-4"><img  src="img/ollie-uconn.jpeg" alt="Kevin Ollie Uconn Huskies"></div>
+        <div id="mccaff" class="col-md-4">
+          <img  src="img/fran-iowa.jpg" alt="Fran McCaffery Iowa Hawkeyes"
+          onmouseover="this.src='img/fran-yellow.jpg'"
+          onmouseout="this.src='img/fran-iowa.jpg'">
+        </div>
+        <div id="miller" class="col-md-4">
+          <img  src="img/miller-au.jpg" alt="Sean Miller Arizona Wildcats"
+          onmouseover="this.src='img/miller-red.jpg'"
+          onmouseout="this.src='img/miller-au.jpg'">
+        </div>
+        <div id="self" class="col-md-4">
+          <img  src="img/bill-self.jpg" alt="Bill Self Kansas Jayhawks"
+          onmouseover="this.src='img/bill-self-blue.jpg'"
+          onmouseout="this.src='img/bill-self.jpg'">
+        </div>
       </div>
       <div id="third row" class="row no-pad">
         <div id="k" class="col-md-4"><img  src="img/k-duke.jpg" alt="Coach K Duke Blue Devils"></div>
